--- a/insurance/daml.yaml
+++ b/insurance/daml.yaml
@@ -1,8 +1,8 @@
 # for config file options, refer to
 # https://docs.daml.com/tools/assistant.html#project-config-file-daml-yaml
 
-sdk-version: 2.9.4
-name: cyberbullying_insurance
+sdk-version: 2.9.5
+name: insurance
 source: daml
 init-script: Main:setup
 version: 0.0.1
